<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg" >

    <TextView
        android:id="@+id/greenCurrentHole"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="17dp"
        android:text="@string/currentHole"
        android:textSize="18sp"
        android:textColor="@color/white" />
    
    <TextView
        android:id="@+id/greenHole"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="25dp"
        android:text="@string/currentHole"
        android:textColor="@color/white"
        android:textSize="28sp" />
        
    <TextView
        android:id="@+id/scorecardPointsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="17dp"
        android:text="@string/pointsLabel"
        android:textSize="18sp"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/scorecardActivePoints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/greenHole"
        android:layout_alignParentRight="true"
        android:layout_marginRight="50dp"
        android:text="@string/activePoints"
        android:textColor="@color/white"
        android:textSize="22sp" />
    
        <TextView android:id="@+id/T1P1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scorecardActivePoints"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="30dp"
        android:textSize="18sp"
        android:text="@string/player1"
        android:textColor="@color/white"
        />
    
    <TextView android:id="@+id/T1P2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/T1P1"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="30dp"
        android:textSize="18sp"
        android:text="@string/player2"
        android:textColor="@color/white"
        />
        
    <TextView android:id="@+id/T2P3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/T1P2"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="30dp"
        android:textSize="18sp"
        android:text="@string/player3"
        android:textColor="@color/white"
        />
            
    <TextView android:id="@+id/T2P4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/T2P3"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="30dp"
        android:textSize="18sp"
        android:text="@string/player4"
        android:textColor="@color/white"
        />

    <EditText android:id="@+id/player1HoleScore"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scorecardActivePoints"
        android:layout_alignParentRight="true"
        android:layout_marginRight="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:hint="@string/holeScore"
        android:textColor="@color/black"
        android:inputType="number"
        />
    
    <EditText android:id="@+id/player2HoleScore"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/player1HoleScore"
        android:layout_alignParentRight="true"
        android:layout_marginRight="40dp"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="30dp"
        android:hint="@string/holeScore"
        android:textColor="@color/black"
        android:inputType="number"
        />
        
    <EditText android:id="@+id/player3HoleScore"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/player2HoleScore"
        android:layout_alignParentRight="true"
        android:layout_marginRight="40dp"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="30dp"
        android:hint="@string/holeScore"
        android:textColor="@color/black"
        android:inputType="number"
        />        
    
     <EditText android:id="@+id/player4HoleScore"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/player3HoleScore"
        android:layout_alignParentRight="true"
        android:layout_marginRight="40dp"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="30dp"
        android:hint="@string/holeScore"
        android:textColor="@color/black"
        android:inputType="number"
        />        
    
     <Button
        android:id="@+id/nextHoleButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@+id/player4HoleScore"
        android:layout_marginTop="25dp"
        android:text="@string/next"
        android:background="@drawable/greenbutton" />   
    
    
    
    
</RelativeLayout>